--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
 
       <div class="headerText">
         <h1>
-          Rebecca Romeo
+          Hello! <br> I'm Rebecca Romeo
         </h1>
     
         <h2>
-          Web Developer
+          a front end developer
         </h2>
 
       </div>
