--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <div class="headerText">
         <h1>
-          Hello! <br> I'm Rebecca Romeo
+          Hello! I'm Rebecca Romeo
         </h1>
     
         <h2>
