added img to project section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
       <div class="project project1">
         <div class="projectImage">
-          <img src="./assets/mockuphold.png" alt="">
+          <img src="./assets/mockup4.png" alt="">
         </div>
         <div class="projectDescription">
           <h4>FreeTravel</h4>
