media query adjustments

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
 
       <div class="headerText">
-        <h1>hello world, I'm <br>Rebecca Romeo</h1>
+        <h1>hello world, I'm <br> <span class="h1Name">Rebecca Romeo</span></h1>
         <h2>front end developer</h2>
       </div>
     </div> <!-- END .wrapper -->
@@ -42,7 +42,7 @@
     <section class="about wrapper" id="about">
       <div class="aboutText">
         <h3>About</h3>
-        <p>Hi, I'm Rebecca! A freshly minted front end developer with a love for coffee, cats, and coding. I have an eye for detail and I enjoy creating aesthetic, responsive, accessible websites and apps. I like to meet challenging goals and collaborating with others to achieve results.</p>
+        <p class="aboutP">Hi, I'm Rebecca! A freshly minted front end developer with a love for coffee, cats, and coding. I have an eye for detail and I enjoy creating aesthetic, responsive, accessible websites and apps. I like to meet challenging goals and collaborating with others to achieve results.</p>
       </div>
 
       <div class="aboutImgContainer">
@@ -52,7 +52,7 @@
 
     <!-- SKILLS SECTION -->
     <section class="skills wrapper" id="skills">
-      <h3>Skills</h3>
+      <h3>Stack</h3>
       <ul class="skillsList">
         <li data-aos="fade-down"
         data-aos-easing="linear"
