final media query adjustments

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
 
   <header id="home">
-    <div class="wrapper">
+    <div class="headerContainer wrapper">
       <nav class="headerNav"> 
         <ul>
-          <li><a href="#home" title="home"><i class="fa-solid fa-house"></i></a></li>
+          <!-- <li><a href="#home" title="home"><i class="fa-solid fa-house"></i></a></li> -->
           <li><a href="#about" title="about"><i class="fa-solid fa-user"></i></a></li>
           <li><a href="#skills" title="skills"><i class="fa-solid fa-screwdriver-wrench"></i></a></li>
           <li><a href="#portfolio" title="portfolio"><i class="fa-regular fa-folder-open"></i></a></li>
@@ -257,7 +257,9 @@
   </main>
 
   <footer>
-    <p>Designed and built by Rebecca Romeo 2022 </p>
+    <div class="wrapper">
+      <p>Designed & built by Rebecca Romeo 2022 </p>
+    </div>
   </footer>
 
   <script src="./app.js"></script>
