updated project description and about me

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     <section class="about wrapper" id="about">
       <div class="aboutText">
         <h3>About</h3>
-        <p class="aboutP">Hi, I'm Rebecca! A freshly minted front end developer with a love for coffee, cats, and coding. I have an eye for detail and I enjoy creating aesthetic, responsive, accessible websites and apps. I like to meet challenging goals and collaborating with others to achieve results.</p>
+        <p class="aboutP">Hi, I'm Rebecca! A freshly minted front-end developer with a love for coffee, cats, and coding. I have an eye for detail and I enjoy creating aesthetic, responsive, accessible websites & apps. I like to meet challenging goals and collaborating with others to achieve results. 
+        </br>
+        </br>
+        Prior to becoming a developer, I worked as a program coordinator and teacher at a robotics and coding school that provides STEM education to elementary students throughout Ontario. I really enjoyed teaching kids how to code, and I hope one day they can use those abilities in the future. As for myself, I am eager to delve further into the field of web development!</p>
       </div>
 
       <div class="aboutImgContainer">
@@ -121,7 +124,7 @@
         <div class="projectTextContainer">
           <h4>FreeTravel</h4>
           <span class="projectStack">react / api / css</span>
-          <p class="projectSummary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque accusantium, sequi vitae dolore, explicabo quia fuga libero, voluptatum perspiciatis provident ad repellendus. Quae asperiores deserunt distinctio, qui ipsa reprehenderit ab.
+          <p class="projectSummary">A travel exploration app. Users can explore the world by searching for any city or country. Utilizes the Unsplash API data source, core React concepts, error handling, and UI design.
 
           </p>
           <div class="projectLinks">
@@ -138,10 +141,10 @@
       <!-- Who's That Pokemon Project -->
       <div class="project projectReverse">
         <div class="projectTextContainer">
-          <h4>Who's that pokemon</h4>
+          <h4>Who's That Pokemon</h4>
           <span class="projectStack"> javascript / api / html / sass</span>
           <p class="projectSummary">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam blanditiis minus neque tempora quam corrupti saepe amet quasi, tenetur, ex expedita libero. Veniam molestias, eos totam neque quis atque pariatur!
+            A Pokedex app. Users have the option of learning about a random Pokemon, or they can search for a Pokemon of choice. This project utilizes two endpoints from the PokeAPI, JavaScript, DOM manipulation, error handling & UI design, and paired programming teamwork.
           </p>
           <div class="projectLinks">
             <a href="https://whos-that-pokemon-main.netlify.app" target="_blank">view live <i class="fa-solid fa-share"></i></a>
@@ -163,7 +166,7 @@
             PSD conversion / html / sass
           </span>
           <p class="projectSummary">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est ut id consequuntur ab ullam aliquid iusto harum. Numquam quo illum fugiat eum voluptate cum voluptatum! Sunt at deserunt rerum enim.
+            Translated static design images and style guide into a functional, multi-page responsive website using HTML and SASS. Features a home, blog, and contact page.
           </p>
           <div class="projectLinks">
             <a href="https://creative-services.netlify.app" target="_blank">view live <i class="fa-solid fa-share"></i></a>
