added a project to the portfolio section. Removed unused images

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="projectImg">
-          <img src="./assets/FreeTravelcopy.png" alt="">
+          <img src="./assets/FreeTravelcopy.png" alt="Image of a travel app">
         </div>
       </div>
       <!-- END FreeTravel Project -->
@@ -152,10 +152,31 @@
           </div>
         </div>
         <div class="projectImg">
-          <img src="./assets/pokemon2.png" alt="">
+          <img src="./assets/pokemon2.png" alt="Image of a pokemon app">
         </div>
       </div>
       <!-- END Who's That Pokemon Project -->
+
+      <!-- Sanctuary Helpers PSD Project -->
+      <div class="project">
+        <div class="projectTextContainer">
+          <h4>Sanctuary Helpers</h4>
+          <span class="projectStack">
+            PSD conversion / html / sass
+          </span>
+          <p class="projectSummary">
+            A multi-page website made by converting static design images and style guide into a functional site using HTML and SASS. Features a home, blog, and contact page. Fully responsive from 320px and up. 
+          </p>
+          <div class="projectLinks">
+            <a href="https://sanctuary-helpers-main.netlify.app/index.html" target="_blank">view live <i class="fa-solid fa-share"></i></a>
+            <a href="https://github.com/rebecca-romeo/rebeccaRomeoProjectOne" target="_blank">view code <i class="fa-solid fa-share"></i></a>
+          </div>
+        </div>
+        <div class="projectImg">
+          <img src="./assets/sanctuaryHelpers2.png" alt="Image of a couch website">
+        </div>
+      </div>
+      <!-- END Sanctuary Helpers PSD Project -->
 
 
       <!-- Creative PSD Project -->
@@ -166,7 +187,7 @@
             PSD conversion / html / sass
           </span>
           <p class="projectSummary">
-            Translated static design images and style guide into a functional, multi-page responsive website using HTML and SASS. Features a home, blog, and contact page.
+            Translated static design images and style guide into a functional, multi-page responsive website using HTML and SASS. Features a home, blog, and contact page. Currently translated for desktop and laptop version. iPad and mobile responsiveness currently in progress. 
           </p>
           <div class="projectLinks">
             <a href="https://creative-services.netlify.app" target="_blank">view live <i class="fa-solid fa-share"></i></a>
@@ -174,33 +195,10 @@
           </div>
         </div>
         <div class="projectImg">
-          <img src="./assets/creative.png" alt="">
+          <img src="./assets/creative.png" alt="Image of a Creative Services website">
         </div>
       </div>
       <!-- END Creative PSD Project -->
-
-      <!-- Project -->
-      <!-- <div class="project">
-        <div class="projectTextContainer">
-          <h4></h4>
-          <span class="projectStack">
-          </span>
-          <p class="projectSummary">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est ut id consequuntur ab ullam aliquid iusto harum. Numquam quo illum fugiat eum voluptate cum voluptatum! Sunt at deserunt rerum enim.
-          </p>
-          <div class="projectLinks">
-            <a href="" target="_blank">view live <i class="fa-solid fa-share"></i></a>
-            <a href="" target="_blank">view code <i class="fa-solid fa-share"></i></a>
-          </div>
-        </div>
-        <div class="projectImg">
-          <img src="" alt="">
-        </div>
-      </div> -->
-      <!-- END Project -->
-
-
-
     </section>
 
     <!-- CONTACT SECTION -->
