added gif movie spoiler project

--- a/index.html
+++ b/index.html
@@ -156,6 +156,27 @@
         </div>
       </div>
       <!-- END Who's That Pokemon Project -->
+      
+
+      <!-- Movie Gif Spoiler -->
+      <div class="project projectReverse">
+        <div class="projectTextContainer">
+          <h4>GIF Movie Spoiler</h4>
+          <span class="projectStack"> react / APIs / firebase / css</span>
+          <p class="projectSummary">
+            Search for a movie title, view the plot summary in gifs, and save individual gifs
+            to favourites. Uses React, Firebase, two API databases (), and teamwork in group project management
+          </p>
+          <div class="projectLinks">
+            <a href="https://group-06-project-04-main.netlify.app/home" target="_blank">view live <i class="fa-solid fa-share"></i></a>
+            <a href="https://github.com/Movie-gif-spoilers/moveGifSpoilers" target="_blank">view code <i class="fa-solid fa-share"></i></a>
+          </div>
+        </div>
+        <div class="projectImg">
+          <img src="/assets/movieSpoiler.png" alt="Image of a pokemon app">
+        </div>
+      </div>
+      <!-- END Movie spoiler Project -->
 
       <!-- Sanctuary Helpers PSD Project -->
       <div class="project">
