updated link on movie project

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             to favourites. Uses React, Firebase, two API databases (), and teamwork in group project management
           </p>
           <div class="projectLinks">
-            <a href="https://group-06-project-04-main.netlify.app/home" target="_blank">view live <i class="fa-solid fa-share"></i></a>
+            <a href="https://group-06-project-04-main.netlify.app" target="_blank">view live <i class="fa-solid fa-share"></i></a>
             <a href="https://github.com/Movie-gif-spoilers/moveGifSpoilers" target="_blank">view code <i class="fa-solid fa-share"></i></a>
           </div>
         </div>
