changed one word in about me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <p class="aboutP">Hi, I'm Rebecca! A freshly minted front-end developer with a love for coffee, cats, and coding. I have an eye for detail and I enjoy creating aesthetic, responsive, accessible websites & apps. I like to meet challenging goals and collaborating with others to achieve results. 
         </br>
         </br>
-        Prior to becoming a developer, I worked as a program coordinator and teacher at a robotics and coding school that provides STEM education to elementary students throughout Ontario. I really enjoyed teaching kids how to code, and I hope one day they can use those abilities in the future. As for myself, I am eager to delve further into the field of web development!</p>
+        Prior to becoming a developer, I worked as a program supervisor and teacher at a robotics and coding school that provides STEM education to elementary students throughout Ontario. I really enjoyed teaching kids how to code, and I hope one day they can use those abilities in the future. As for myself, I am eager to delve further into the field of web development!</p>
       </div>
 
       <div class="aboutImgContainer">
