minor spelling fix

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <span class="projectStack"> react / APIs / firebase / css</span>
           <p class="projectSummary">
             Search for a movie title, view the plot summary in gifs, and save individual gifs
-            to favourites. Uses React, Firebase, two API databases (), and teamwork in group project management
+            to favourites. Uses React, Firebase, two API databases, and teamwork in group project management
           </p>
           <div class="projectLinks">
             <a href="https://group-06-project-04-main.netlify.app" target="_blank">view live <i class="fa-solid fa-share"></i></a>
