updated project description

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             PSD conversion / html / sass
           </span>
           <p class="projectSummary">
-            Translated static design images and style guide into a functional, multi-page responsive website using HTML and SASS. Features a home, blog, and contact page. Currently translated for desktop and laptop version. iPad and mobile responsiveness currently in progress. 
+            (Currently in progress - see what I'm working on!) Translated static design images and style guide into a functional, multi-page responsive website using HTML and SASS. Features a home, blog, and contact page. Desktop and laptop version completed. Smaller screen sizes such as iPad and mobile responsiveness currently in progress. 
           </p>
           <div class="projectLinks">
             <a href="https://creative-services.netlify.app" target="_blank">view live <i class="fa-solid fa-share"></i></a>
