--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rebecca Romeo</title>
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 
   <!-- Font Awesome Icons -->
   <script src="https://kit.fontawesome.com/23395927b9.js" crossorigin="anonymous"></script>
