update project section to include Frog Finance. Reorde projects. Fix tech stack media q

--- a/index.html
+++ b/index.html
@@ -157,11 +157,53 @@
     <section class="portfolio wrapper" id="portfolio">
       <h3>Projects</h3>
 
+      <!-- Frog Finance -->
+      <div class="project projectReverse">
+        <div class="projectTextContainer">
+          <h4>Frog Finance</h4>
+          <span class="projectStack"> React / Node.js / PostgreSQL / Tailwind / CSS · team </span>
+          <p class="projectSummary">
+            Full stack, multipage budgeting and finance app. Users can track their income, expenses, budgets, saving goals, and debts. Users can also learn about stocks, finances, and money management.
+          </p>
+          <div class="projectLinks">
+            <a href="https://github.com/rebecca-romeo/frog-finance" target="_blank">view code <i
+                class="fa-solid fa-share"></i></a>
+          </div>
+        </div>
+        <div class="projectImg">
+          <img src="./assets/frog-finance.png" alt="Image of frog finance app">
+        </div>
+      </div>
+      <!-- END Frog Finance -->
+
+      <!-- re-furnish -->
+      <div class="project projectReverse">
+        <div class="projectTextContainer">
+          <h4>re-furnish</h4>
+          <span class="projectStack"> NodeJS / Express / EJS / PostgreSQL / SASS · team </span>
+          <p class="projectSummary">
+            Full stack, multi-page buy & sell site. Post items, contact sellers, and save items to favourites. Developed
+            according to client specifications, exhibits teamwork in project management, and UI & DB planning & design.
+          </p>
+          <div class="projectLinks">
+            <!-- <a href="https://whos-that-pokemon-main.netlify.app" target="_blank">view live <i
+                      class="fa-solid fa-share"></i></a> -->
+            <a href="https://github.com/rebecca-romeo/refurnish" target="_blank">view code <i
+                class="fa-solid fa-share"></i></a>
+          </div>
+        </div>
+        <div class="projectImg">
+          <img src="./assets/refurnish.png" alt="Image of a re-furnish app">
+        </div>
+      </div>
+      <!-- END re-furnish -->
+
+
       <!-- Who's That Pokemon Project -->
       <div class="project projectReverse">
         <div class="projectTextContainer">
           <h4>Who's That Pokemon</h4>
-          <span class="projectStack"> JavaScript / PokeAPI / HTML / SASS  · paired</span>
+          <span class="projectStack"> JavaScript / PokeAPI / HTML / SASS · paired</span>
           <p class="projectSummary">
             A Pokedex app. Users have the option of learning about a random Pokemon, or they can search for a Pokemon of
             choice. This project utilizes two endpoints from the PokeAPI, JavaScript, DOM manipulation, error handling &
@@ -180,12 +222,64 @@
       </div>
       <!-- END Who's That Pokemon Project -->
 
+      <!-- Creative PSD Project -->
+      <div class="project">
+        <div class="projectTextContainer">
+          <h4>CREATIVE Website</h4>
+          <span class="projectStack">
+            PSD Conversion / HTML / SASS · solo
+          </span>
+          <p class="projectSummary">
+            (Currently in progress - see what I'm working on!) Translated static design images and style guide into a
+            functional, multi-page responsive website using HTML and SASS. Features a home, blog, and contact page.
+            Desktop and laptop version completed. Smaller screen sizes such as iPad and mobile responsiveness currently
+            in progress.
+          </p>
+          <div class="projectLinks">
+            <a href="https://creative-services.netlify.app" target="_blank">view live <i
+                class="fa-solid fa-share"></i></a>
+            <a href="https://github.com/rebecca-romeo/designConversion" target="_blank">view code <i
+                class="fa-solid fa-share"></i></a>
+          </div>
+        </div>
+        <div class="projectImg">
+          <img src="./assets/creative2.png" alt="Image of a Creative Services website">
+        </div>
+      </div>
+      <!-- END Creative PSD Project -->
+
+
+      <!-- PhotoLabs -->
+      <div class="project projectReverse">
+        <div class="projectTextContainer">
+          <h4>PhotoLabs</h4>
+          <span class="projectStack"> React / API / SCSS · solo </span>
+          <p class="projectSummary">
+            React-based single-page application (SPA) that allows users to view photos in different contexts. Users can
+            favourite photos, view photos of different categories, and open a modal on each photo to see a larger view
+            of it & along with similar photos
+          </p>
+          <div class="projectLinks">
+            <!-- <a href="https://whos-that-pokemon-main.netlify.app" target="_blank">view live <i
+                class="fa-solid fa-share"></i></a> -->
+            <a href="https://github.com/rebecca-romeo/photolabs" target="_blank">view code <i
+                class="fa-solid fa-share"></i></a>
+          </div>
+        </div>
+        <div class="projectImg">
+          <img src="./assets/photolabs.png" alt="Image of a photolabs app">
+        </div>
+      </div>
+      <!-- END Photolabs Project -->
+
+
       <!-- FreeTravel Project -->
       <div class="project">
         <div class="projectTextContainer">
           <h4>FreeTravel</h4>
           <span class="projectStack">React / Unsplash API / CSS · solo</span>
-          <p class="projectSummary">A travel exploration app. Users can explore the world by searching for any city or country. Utilizes the Unsplash API data source, core React concepts, error handling, and UI design.
+          <p class="projectSummary">A travel exploration app. Users can explore the world by searching for any city or
+            country. Utilizes the Unsplash API data source, core React concepts, error handling, and UI design.
           </p>
           <div class="projectLinks">
             <a href="https://freetravel-main.netlify.app" target="_blank">view live <i
@@ -231,7 +325,8 @@
             PSD Conversion / HTML / SASS · solo
           </span>
           <p class="projectSummary">
-            A multi-page website made by converting static design images and style guide into a functional site using HTML and SASS. Features a home, blog, and contact page. Fully responsive from 320px and up.
+            A multi-page website made by converting static design images and style guide into a functional site using
+            HTML and SASS. Features a home, blog, and contact page. Fully responsive from 320px and up.
           </p>
           <div class="projectLinks">
             <a href="https://sanctuary-helpers-main.netlify.app/index.html" target="_blank">view live <i
@@ -246,40 +341,14 @@
       </div>
       <!-- END Sanctuary Helpers PSD Project -->
 
-
-      <!-- Creative PSD Project -->
-      <div class="project">
-        <div class="projectTextContainer">
-          <h4>CREATIVE Website</h4>
-          <span class="projectStack">
-            PSD Conversion / HTML / SASS · solo
-          </span>
-          <p class="projectSummary">
-            (Currently in progress - see what I'm working on!) Translated static design images and style guide into a
-            functional, multi-page responsive website using HTML and SASS. Features a home, blog, and contact page.
-            Desktop and laptop version completed. Smaller screen sizes such as iPad and mobile responsiveness currently
-            in progress.
-          </p>
-          <div class="projectLinks">
-            <a href="https://creative-services.netlify.app" target="_blank">view live <i
-                class="fa-solid fa-share"></i></a>
-            <a href="https://github.com/rebecca-romeo/designConversion" target="_blank">view code <i
-                class="fa-solid fa-share"></i></a>
-          </div>
-        </div>
-        <div class="projectImg">
-          <img src="./assets/creative2.png" alt="Image of a Creative Services website">
-        </div>
-      </div>
-      <!-- END Creative PSD Project -->
-
       <!-- tweeter -->
       <div class="project projectReverse">
         <div class="projectTextContainer">
           <h4>Tweeter</h4>
-          <span class="projectStack"> JavaScript / jQuery / Express / EJS / CSS  · solo </span>
+          <span class="projectStack"> JavaScript / jQuery / Express / EJS / CSS · solo </span>
           <p class="projectSummary">
-            Front-end focused SPA that also utilizes express. Users write messages under 140 characters and post it to the page
+            Front-end focused SPA that also utilizes express. Users write messages under 140 characters and post it to
+            the page
           </p>
           <div class="projectLinks">
             <!-- <a href="https://whos-that-pokemon-main.netlify.app" target="_blank">view live <i
@@ -294,47 +363,8 @@
       </div>
       <!-- END tweeter -->
 
-      <!-- re-furnish -->
-      <div class="project projectReverse">
-        <div class="projectTextContainer">
-          <h4>re-furnish</h4>
-          <span class="projectStack"> NodeJS / Express / EJS / PostgreSQL / SASS · team </span>
-          <p class="projectSummary">
-            Full stack, multi-page buy & sell site. Post items, contact sellers, and save items to favourites. Developed according to client specifications, exhibits teamwork in project management, and UI & DB planning & design.
-          </p>
-          <div class="projectLinks">
-            <!-- <a href="https://whos-that-pokemon-main.netlify.app" target="_blank">view live <i
-                class="fa-solid fa-share"></i></a> -->
-            <a href="https://github.com/rebecca-romeo/refurnish" target="_blank">view code <i
-                class="fa-solid fa-share"></i></a>
-          </div>
-        </div>
-        <div class="projectImg">
-          <img src="./assets/refurnish.png" alt="Image of a re-furnish app">
-        </div>
-      </div>
-      <!-- END re-furnish -->
 
-      <!-- PhotoLabs -->
-      <div class="project projectReverse">
-        <div class="projectTextContainer">
-          <h4>PhotoLabs</h4>
-          <span class="projectStack"> React / API / SCSS  · solo </span>
-          <p class="projectSummary">
-            React-based single-page application (SPA) that allows users to view photos in different contexts. Users can favourite photos, view photos of different categories, and open a modal on each photo to see a larger view of it & along with similar photos
-          </p>
-          <div class="projectLinks">
-            <!-- <a href="https://whos-that-pokemon-main.netlify.app" target="_blank">view live <i
-                class="fa-solid fa-share"></i></a> -->
-            <a href="https://github.com/rebecca-romeo/photolabs" target="_blank">view code <i
-                class="fa-solid fa-share"></i></a>
-          </div>
-        </div>
-        <div class="projectImg">
-          <img src="./assets/photolabs.png" alt="Image of a photolabs app">
-        </div>
-      </div>
-      <!-- END Photolabs Project -->
+
 
     </section>
 
