--- a/index.html
+++ b/index.html
@@ -230,10 +230,8 @@
             PSD Conversion / HTML / SASS · solo
           </span>
           <p class="projectSummary">
-            (Currently in progress - see what I'm working on!) Translated static design images and style guide into a
-            functional, multi-page responsive website using HTML and SASS. Features a home, blog, and contact page.
-            Desktop and laptop version completed. Smaller screen sizes such as iPad and mobile responsiveness currently
-            in progress.
+            Translated static design images and style guide into a
+            functional, multi-page responsive website using HTML and SCSS. Features a home, blog, and contact page. Responsive down to 320px.
           </p>
           <div class="projectLinks">
             <a href="https://creative-services.netlify.app" target="_blank">view live <i
