minor updates to About & Project sections

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
     <section class="about wrapper" id="about">
       <div class="aboutText">
         <h3>About</h3>
-        <p class="aboutP">Hi, I'm Rebecca! A front-end developer with a love for coffee, cats, and coding. I have an eye
-          for detail and I enjoy creating aesthetic, responsive, accessible websites & apps. I like to meet challenging
-          goals and collaborating with others to achieve results.
+        <p class="aboutP">Hey, I'm Rebecca! A full stack developer with a love for coffee, cats, and coding. I have an eye
+          for detail and enjoy creating aesthetic, responsive, accessible websites & apps. I like to meet challenging
+          goals and collaborating with others.
           </br>
           </br>
           Prior to web developement, I worked as a program supervisor and teacher at a robotics and coding school that
-          provides STEM education to elementary students throughout Ontario. Teaching kids coding was a thoroughly
+          provides STEM education to elementary students throughout Ontario. Teaching kids to code was a thoroughly
           enjoyable experience for me, and I'm excited for them to utilize their newfound skills in the future. As for
           myself, I am excited to embark on a career in web development and eager to delve deeper into the field!</p>
       </div>
@@ -180,7 +180,7 @@
       <div class="project projectReverse">
         <div class="projectTextContainer">
           <h4>re-furnish</h4>
-          <span class="projectStack"> NodeJS / Express / EJS / PostgreSQL / SASS · team </span>
+          <span class="projectStack"> Node.js / Express / EJS / PostgreSQL / SASS · team </span>
           <p class="projectSummary">
             Full stack, multi-page buy & sell site. Post items, contact sellers, and save items to favourites. Developed
             according to client specifications, exhibits teamwork in project management, and UI & DB planning & design.
@@ -421,7 +421,7 @@
 
   <footer>
     <div class="wrapper">
-      <p>Designed & built by Rebecca Romeo 2022 </p>
+      <p>Designed & built by Rebecca Romeo </p>
     </div>
   </footer>
 
